--- a/livestant.css
+++ b/livestant.css
@@ -1,14 +1,65 @@
 body {
     font-family: 'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-    width:100%;
-    height:100%;
+    padding:0;
+    margin:0;
+    background:#e1e1e1;
+}
+
+html{
     padding:0;
     margin:0;
 }
 
-html{
+.header{
     width:100%;
-    height:100%;
-    padding:0;
+    position:fixed;
+    top:0px;
+    left:0px;
+    padding:5px;
+    background:#002456;
+}
+
+a{
+    text-decoration:none;
+    color:#000000;
+}
+
+.logo{
+    font-size:24px;
     margin:0;
+    padding:0;
+    position:absolute;
+    left:10%;
+    color:#fff;
+
+    -webkit-margin:0;
+}
+
+.createButton{
+    font-weight:bold;
+    font-size:24px;
+    position:relative;
+    background:rgba(0,0,0,0);
+    left:75%;
+    color:#fff;
+    cursor:pointer;
+    
+}
+
+.message{
+    font-family: 'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+    background:#fff;
+    border:1px solid black;
+    position:absolute;
+
+    word-wrap:break-word;
+    z-index:100;
+}
+
+
+.createForm{
+    text-align:center;
+    background:white;
+    padding:20px;
+
 }
